# notebook-md

./: .dockerignore  .env.example  .gitignore  README.md  desktop.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  desktop-build.yml  rollback.yml  update-repo-description.yml
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/api/: eslint.config.js  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/collab/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/en.lproj/: InfoPlist.strings
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons-dev/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  ai_settings.rs  commands.rs  main.rs  menu.rs  state.rs  watcher.rs
apps/desktop/src-tauri/tests/: ai_integration.rs
apps/web/: index.html  (+5 more)
docker/: Dockerfile.admin  Dockerfile.api  Dockerfile.collab  Dockerfile.web
e2e/: ai.spec.ts  cloud.spec.ts  mobile.spec.ts  navigation.spec.ts  smoke.spec.ts
infra/: DEPLOY.md  dns-records.md
plans/: auth-provider-plan.md  demo-mode-plan.md  initial-plan.md  mobile-web-plan.md  navigation-state-design.md  plan-status.md
requirements/: requirements-questions.md  requirements.md  security-review-answers.md  security-review-questions.md
reviews/: security-review-opus.md
scripts/: build-desktop.sh  bump-version.sh  generate-og-image.ts  manual-deploy.sh  manual-rollback.sh  reencrypt-data.mjs  release-desktop.sh  rotate-credentials.sh  swap-icons.sh  validate-admin.ts
(+303 files in other folders)
