[package]
name = "notebookmd-desktop"
version = "0.3.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
trash = "5"
tempfile = "3"
notify = "7"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-stream = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
urlencoding = "2"
bytes = "1"
